--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,16 +24,12 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
       - run: ls
-        with:
-          name: build
-          path: build
+          
       - name: Deploy
         uses: s0/git-publish-subdir-action@develop
-        with:
-          name: build
         env:
           REPO: self
           BRANCH: build
-          FOLDER: build
+          FOLDER: *
           GITHUB_TOKEN: ${{ secrets.RPISERVERKEY }}
  
