fix: source path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,6 @@ jobs:
         env:
           REPO: self
           BRANCH: build
-          FOLDER: *
+          FOLDER: build/
           GITHUB_TOKEN: ${{ secrets.RPISERVERKEY }}
  
