--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Deploy
         uses: s0/git-publish-subdir-action@develop
         env:
-          REPO: self
+          REPO: https://github.com/peaqnetwork/peaq-rpi-server-build.git
           BRANCH: build
           FOLDER: build/
           GITHUB_TOKEN: ${{ secrets.RPISERVERKEY }}
