--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -26,7 +26,7 @@ jobs:
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: git@github.com:peaqnetwork/peaq-rpi-server-build.git
-          BRANCH: ${{ github.ref_name }}
+          BRANCH: ${ GITHUB_HEAD_REF }
           FOLDER: build/
           SSH_PRIVATE_KEY: ${{ secrets.RPISERVERKEY }}
  
