--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -20,15 +20,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run build --if-present
-      - run: ls -R
-      - run: cd build
-      - run: ls
-          
+            
       - name: Deploy
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: git@github.com:peaqnetwork/peaq-rpi-server-build.git
-          BRANCH: build
+          BRANCH: dev
           FOLDER: build/
           SSH_PRIVATE_KEY: ${{ secrets.RPISERVERKEY }}
  
